kubernetes/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syon-api
  namespace: syon
spec:
  type: ClusterIP
  selector:
    app: syon
    component: api
  ports:
    - name: http
      port: 80
      targetPort: 8000
